Fix spacing and refactor a tad more

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,17 +11,17 @@ body {
   text-align: center;
 }
 
+.colored-section {
+  background-color: #ff4c68;
+  color: #fff;
+}
+
 .container-fluid {
   padding: 7% 15%;
 }
 
 .copyright {
   font-weight: 600;
-}
-
-#cta {
-  background-color: #ff4c68;
-  color: #fff;
 }
 
 .dog-image {
@@ -54,7 +54,6 @@ body {
 }
 
 #features {
-  background-color: #fff;
   position: relative;
 }
 
@@ -139,7 +138,6 @@ p {
 
 #testimonials {
   background-color: #ef8172;
-  color: #fff;
 }
 
 .testimonial-text {
@@ -148,12 +146,11 @@ p {
   line-height: 1.5;
 }
 
-#title {
-  background-color: #ff4c68;
-  color: #fff;
+#title .container-fluid {
+  padding: 3% 15% 7%;
   text-align: left;
 }
 
-#title .container-fluid {
-  padding: 3% 15% 7%;
+.white-section {
+  background-color: #fff;
 }
